; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_transfer.c_Curl_get_upload_buffer.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_transfer.c_Curl_get_upload_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i32 }

@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@CURLE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_get_upload_buffer(%struct.Curl_easy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.Curl_easy*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %3, align 8
  %4 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %5 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %26, label %9

9:                                                ; preds = %1
  %10 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %11 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i64 @malloc(i32 %13)
  %15 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %16 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  store i64 %14, i64* %17, align 8
  %18 = load %struct.Curl_easy*, %struct.Curl_easy** %3, align 8
  %19 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %9
  %24 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %24, i32* %2, align 4
  br label %28

25:                                               ; preds = %9
  br label %26

26:                                               ; preds = %25, %1
  %27 = load i32, i32* @CURLE_OK, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %26, %23
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
